# hermit-rs-template

./: .gitignore  Cargo.toml  build.rs  rust-toolchain.toml
src/: main.rs
